# reynolds

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: main.yml
src/: reynolds.cpp  reynolds.hpp  reynolds_py.cpp
src/reynolds/: __init__.pyi  reynolds.cpp  reynolds.pyi
tests/: test_reynolds.py
