[project]
name = "reynolds"
version = "0.0.1"
dependencies = ["numpy >= 2.4.2"]

[build-system]
requires = ["scikit-build-core >= 0.11.6",
            "numpy >= 2.4.2"]
build-backend = "scikit_build_core.build"

[project.optional-dependencies]
test = ["ruff >= 0.0.47",
        "mypy >= 1.19.1",
        "pytest >= 9.0.2"]

[tool.ruff]
src = ["src"]
exclude = ["external"]

[tool.mypy]
files = ["src"]